Add hostname and userID to the HTTP API peer response
